test/parse/module/bad-import-not-param.txt
;;; ERROR: 1
(module (import "foo" "bar" (parump i32)))
(;; STDERR ;;;
parse/module/bad-import-not-param.txt:2:30: unexpected token "parump"
parse/module/bad-import-not-param.txt:2:37: syntax error, unexpected VALUE_TYPE, expecting TYPE or PARAM or RESULT
;;; STDERR ;;)
